Actualizar propiedades de la base de datos y agregar consulta filtrada

--- a/Servicio/src/main/resources/application.properties
+++ b/Servicio/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.driver.class=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=admin
+spring.datasource.password=admin
