--- a/Servicio/src/main/resources/application.properties
+++ b/Servicio/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.driver.class=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=root
+spring.datasource.password=root
+FRIENDLYCAPTCHA.CAPTCHAKEY=A1HMM95B3D04C31VEM91T50P9KB12MJ8REDMEP00QPT531H4TL2RLFCADK
+FRIENDLYCAPTCHA.SITEKEY=FCMJTM9F6VADD5L5
